20171211듀크레이_클로란 신규 페이지 및 12월 신규 이벤트

--- a/app/assets/html/detail/MPDU-19.html
+++ b/app/assets/html/detail/MPDU-19.html
@@ -158,7 +158,7 @@
             <div class="a08_box">
                 <ul>
                     <li>
-                        <img alt="" src="#" style="width: 182px; height: 182px; background-color: #842684;"/>
+                        <img alt="" src="DU/a08/a08_07.jpg?$staticlink$" />
                         <!-- 이미지 추후 삽입 : DU/a08/a08_04.jpg?$staticlink$ -->
                         <span>STEP 1</span>
                         <p>샤워 후, 혹은 건조함이 느껴질 때 수시로 발라줍니다.(얼굴 및 전신 사용)</p>
