--- a/app/assets/html/detail/MPDU-20.html
+++ b/app/assets/html/detail/MPDU-20.html
@@ -10,7 +10,7 @@
             </ul>
         </div>
 
-        <div class="con_left"><img alt="덱시안크림" src="DU/a01/DU_01_20.jpg?$staticlink$" /></div>
+        <div class="con_left"><img alt="덱시안밤" src="DU/a01/DU_01_20.jpg?$staticlink$" /></div>
     </div>
 
     <div class="article a02">
@@ -24,8 +24,7 @@
 
                         <p>피부 보습 효과 및<br>건조로부터 보호</p>
                     </li>
-                    <li><img alt="" src="#" style="width: 120px; height: 120px; background-color: #963147;"/>
-                        <!-- 이미지 경로 : DU/a02/GR_DU_15.jpg?$staticlink$ -->
+                    <li><img alt="" src="DU/a02/GR_DU_45.jpg?$staticlink$"/>
                         <h4>베타-글리시레티닉산</h4>
 
                         <p>피부 자극 진정</p>
@@ -159,8 +158,8 @@
             <div class="a08_box">
                 <ul>
                     <li>
-                        <img alt="" src="#" style="width: 182px; height: 182px; background-color: #842684;"/>
-                        <!-- 이미지 추후 삽입 : DU/a08/a08_04.jpg?$staticlink$ -->
+                        <img alt="" src="DU/a08/a08_07.jpg?$staticlink$" />
+                        <!-- 이미지 추후 삽입 : DU/a08/a08_07.jpg?$staticlink$ -->
                         <span>STEP 1</span>
                         <p>샤워 후, 혹은 건조함이 느껴질 때 수시로 발라줍니다. ( 얼굴 및 전신 사용 )</p>
                     </li>
