--- a/app/assets/html/detail/MPKL-15.html
+++ b/app/assets/html/detail/MPKL-15.html
@@ -213,16 +213,45 @@
                     <img alt="" src="KL/a09/KL_01_15.jpg?$staticlink$" />
                     <!-- <a href="#">제품 바로가기</a> -->
                 </a></li>
+                <li><a href="$httpUrl('Product-Show','pid','211351')$">
+                    <h3>03</h3>
+
+                    <h4>퀴닌 케라틴세럼</h4>
+
+                    <p>다섯가지 유효 성분<br>두피, 모발 강화 뿌리영양세럼</p>
+                    <img alt="" src="KL/a09/KL_01_17.jpg?$staticlink$" />
+                    <!-- <a href="#">제품 바로가기</a> -->
+                </a></li>
+            </ul>
+            <!-- <ul>
+                <li><a href="$httpUrl('Product-Show','pid','530602')$">
+                    <h3>01</h3>
+
+                    <h4>퀴닌 샴푸</h4>
+
+                    <p>퀴닌 식물 성분을 담은<br>데일리 모발걍화 샴푸</p>
+                    <img alt="" src="KL/a09/KL_01_14.jpg?$staticlink$" /> -->
+                    <!-- <a href="#">제품 바로가기</a> -->
+                <!-- </a></li>
+                <li><a href="$httpUrl('Product-Show','pid','519346')$">
+                    <h3>02</h3>
+
+                    <h4>퀴닌 컨디셔너</h4>
+
+                    <p>퀴닌 식물 성분을 담은<br>데일리 모발걍화 컨디셔너</p>
+                    <img alt="" src="KL/a09/KL_01_15.jpg?$staticlink$" /> -->
+                    <!-- <a href="#">제품 바로가기</a> -->
+                <!-- </a></li>
                 <li><a href="$httpUrl('Product-Show','pid','530667')$">
                     <h3>03</h3>
 
                     <h4>퀴닌 파워 세럼</h4>
 
                     <p>세가지 유효 성분<br>두피·모발 파워 강화 세럼</p>
-                    <img alt="" src="KL/a09/KL_01_16.jpg?$staticlink$" />
+                    <img alt="" src="KL/a09/KL_01_16.jpg?$staticlink$" /> -->
                     <!-- <a href="#">제품 바로가기</a> -->
-                </a></li>
-            </ul>
+                <!-- </a></li>
+            </ul> -->
         </div>
     </div>
 </div>
