--- a/app/assets/html/event/event-14.html
+++ b/app/assets/html/event/event-14.html
@@ -21,7 +21,6 @@
         overflow: hidden;
         border: 1px solid #ff8d7a;
         border-bottom: 0;
-        position: absolute;
         top: 0;
         left: 0;
         margin-top: 22.2%;
@@ -76,10 +75,8 @@
 
     .tab-wrapper .tab-contents{
         width: 90.8%;
-        position: absolute;
         top: 0;
         left: 0;
-        margin-top: calc(80px + 22.2%);
         margin-left: 5%;
         z-index: 50;
     }
@@ -165,7 +162,14 @@
         .mobile-hidden{display: none;}
         .pc-hidden{display: block;}
 
+
+    .tab-wrapper{
+        background: url('events/event-14/av_event14_tab_bg_m.jpg?$staticlink$') left top no-repeat;
+        background-size: 100%;
+        padding-bottom: 20px;
+    }
         .tab-wrapper .tab-buttons{
+            position: absolute;
             z-index: 300;
             border: 0;
         }
@@ -183,7 +187,7 @@
         }
 
         .tab-wrapper .tab-contents{
-            margin-top: 22.2%;
+            margin-top: 22%;
         }
 
         .tab-wrapper .tab-contents .box .tab-link{
@@ -238,7 +242,7 @@ $include('Product-GtmDataLayer', 'pid', '523471')$
 $include('Product-GtmDataLayer', 'pid', '516790')$
 $include('Product-GtmDataLayer', 'pid', '210029')$
 $include('Product-GtmDataLayer', 'pid', '210032')$
-$include('Product-GtmDataLayer', 'pid', '520443')$
+$include('Product-GtmDataLayer', 'pid', '514073')$
 <div class="event-image">
     <div class="mobile-hidden">
         <div class="visual">
@@ -248,7 +252,7 @@ $include('Product-GtmDataLayer', 'pid', '520443')$
         </div>
 
         <div class="tab-wrapper">
-            <!-- <img src="events/event-14/av_event14_tab_bg.jpg?$staticlink$" alt="" class="tab-bgi"> -->
+            <!--<img src="events/event-14/av_event14_tab_bg.jpg?$staticlink$" alt="" class="tab-bgi">-->
             <ul class="tab-buttons mob-hidden-tab">
                 <li class="t1">
                     <a href="javascript:void(0)" class="active-tab">
@@ -286,7 +290,7 @@ $include('Product-GtmDataLayer', 'pid', '520443')$
             <div class="tab-contents">
                 <div class="tab-content-box active-tab">
                     <div class="box">
-                        <img src="events/event-14/av_event14_tab01.png?$staticlink$" alt="">
+                        <img src="events/event-14/av_event14_tab01.jpg?$staticlink$" alt="">
                         <a href="$httpUrl('Product-Show','pid','210257')$" data-gtm-event="click-product" data-gtm-pid="210257" onfocus="this.blur()" class="tab-link left-link"></a>
                         <!--  onfocus="this.blur()" -->
                         <a href="$httpUrl('Product-Show','pid','210256')$" data-gtm-event="click-product" data-gtm-pid="210256" onfocus="this.blur()" class="tab-link right-link"></a>
@@ -294,22 +298,22 @@ $include('Product-GtmDataLayer', 'pid', '520443')$
                 </div>
                 <div class="tab-content-box">
                     <div class="box">
-                        <img src="events/event-14/av_event14_tab02.png?$staticlink$" alt="">
+                        <img src="events/event-14/av_event14_tab02.jpg?$staticlink$" alt="">
                         <a href="$httpUrl('Product-Show','pid','523471')$" data-gtm-event="click-product" data-gtm-pid="523471" onfocus="this.blur()" class="tab-link left-link"></a>
                         <a href="$url('Search-Show','q','이드랑스 하이드레이팅 크림')$" onfocus="this.blur()" class="tab-link right-link"></a>
                     </div>
                 </div>
                 <div class="tab-content-box">
                     <div class="box">
-                        <img src="events/event-14/av_event14_tab03.png?$staticlink$" alt="">
+                        <img src="events/event-14/av_event14_tab03.jpg?$staticlink$" alt="">
                         <a href="$httpUrl('Product-Show','pid','210029')$" data-gtm-event="click-product" data-gtm-pid="210029" onfocus="this.blur()" class="tab-link left-link"></a>
                         <a href="$httpUrl('Product-Show','pid','210032')$" data-gtm-event="click-product" data-gtm-pid="210032" onfocus="this.blur()" class="tab-link right-link"></a>
                     </div>
                 </div>
                 <div class="tab-content-box">
                     <div class="box">
-                        <img src="events/event-14/av_event14_tab04.png?$staticlink$" alt="">
-                        <a href="$httpUrl('Product-Show','pid','520443')$" data-gtm-event="click-product" data-gtm-pid="520443" onfocus="this.blur()" class="tab-link-all"></a>
+                        <img src="events/event-14/av_event14_tab04.jpg?$staticlink$" alt="">
+                        <a href="$httpUrl('Product-Show','pid','514073')$" data-gtm-event="click-product" data-gtm-pid="514073" onfocus="this.blur()" class="tab-link-all"></a>
                     </div>
                 </div>
             </div>
@@ -328,7 +332,7 @@ $include('Product-GtmDataLayer', 'pid', '520443')$
         </div>
 
         <div class="tab-wrapper">
-            <!-- <img src="events/event-14/av_event14_tab_bg_m.jpg?$staticlink$" alt=""> -->
+            <!--<img src="events/event-14/av_event14_tab_bg_m.jpg?$staticlink$" alt="">-->
             <ul class="tab-buttons">
                 <li class="t1">
                     <a href="javascript:void(0)" class="active-tab"></a>
@@ -346,29 +350,29 @@ $include('Product-GtmDataLayer', 'pid', '520443')$
             <div class="tab-contents">
                 <div class="tab-content-box active-tab">
                     <div class="box">
-                        <img src="events/event-14/av_event14_tab01_m.png?$staticlink$" alt="">
+                        <img src="events/event-14/av_event14_tab01_m.jpg?$staticlink$" alt="">
                         <a href="$httpUrl('Product-Show','pid','210257')$" data-gtm-event="click-product" data-gtm-pid="210257" onfocus="this.blur()" class="tab-link left-link"></a>
                         <a href="$httpUrl('Product-Show','pid','210256')$" data-gtm-event="click-product" data-gtm-pid="210256" onfocus="this.blur()" class="tab-link right-link"></a>
                     </div>
                 </div>
                 <div class="tab-content-box">
                     <div class="box">
-                        <img src="events/event-14/av_event14_tab02_m.png?$staticlink$" alt="">
+                        <img src="events/event-14/av_event14_tab02_m.jpg?$staticlink$" alt="">
                         <a href="$httpUrl('Product-Show','pid','523471')$" data-gtm-event="click-product" data-gtm-pid="523471" onfocus="this.blur()" class="tab-link left-link"></a>
-                        <a href="$httpUrl('Product-Show','pid','516790')$" data-gtm-event="click-product" data-gtm-pid="516790" onfocus="this.blur()" class="tab-link right-link"></a>
+                        <a href="$url('Search-Show','q','이드랑스 하이드레이팅 크림')$" onfocus="this.blur()" class="tab-link right-link"></a>
                     </div>
                 </div>
                 <div class="tab-content-box">
                     <div class="box">
-                        <img src="events/event-14/av_event14_tab03_m.png?$staticlink$" alt="">
+                        <img src="events/event-14/av_event14_tab03_m.jpg?$staticlink$" alt="">
                         <a href="$httpUrl('Product-Show','pid','210029')$" data-gtm-event="click-product" data-gtm-pid="210029" onfocus="this.blur()" class="tab-link left-link"></a>
                         <a href="$httpUrl('Product-Show','pid','210032')$" data-gtm-event="click-product" data-gtm-pid="210032" onfocus="this.blur()" class="tab-link right-link"></a>
                     </div>
                 </div>
                 <div class="tab-content-box">
                     <div class="box">
-                        <img src="events/event-14/av_event14_tab04_m.png?$staticlink$" alt="">
-                        <a href="$httpUrl('Product-Show','pid','520443')$" data-gtm-event="click-product" data-gtm-pid="520443" onfocus="this.blur()" class="tab-link-all"></a>
+                        <img src="events/event-14/av_event14_tab04_m.jpg?$staticlink$" alt="">
+                        <a href="$httpUrl('Product-Show','pid','514073')$" data-gtm-event="click-product" data-gtm-pid="514073" onfocus="this.blur()" class="tab-link-all"></a>
                     </div>
                 </div>
             </div>
