--- a/app/assets/html/event/AV-Hidden_Cicalfate.html
+++ b/app/assets/html/event/AV-Hidden_Cicalfate.html
@@ -62,10 +62,9 @@
         <div class="event-box"><img src="events/AV-Hidden_Cicalfate/img3.jpg?$staticlink$" alt=""></div>
         <div class="event-box">
             <img src="events/AV-Hidden_Cicalfate/img4.jpg?$staticlink$" alt="">
-            <a href="$httpUrl('Product-Show','pid','520443')$" class="link" style="width: 45%;height: 75%;bottom: 9.3%;left: 3.5%" title="시칼파트 블루젤 40ml 구매하기">시칼파트 블루젤 40ml 구매하기</a>
-            <a href="$httpUrl('Product-Show','pid','649111')$" class="link" style="width: 46%;height: 75%;bottom: 9.3%;left: 52%;" title="시칼파트 S.O.S 크림 40ml 구매하기">시칼파트 S.O.S 크림 40ml 구매하기</a>
+            <a href="$httpUrl('Product-Show','pid','520443')$" class="link" style="width: 95%;height: 80%;bottom: 2%;left: 2.5%" title="시칼파트 블루젤 40ml 구매하기">시칼파트 블루젤 40ml 구매하기</a>
         </div>
-        <div class="event-box">
+        <div class="event-box" style="margin-top: -4px;">
             <img src="events/AV-Hidden_Cicalfate/img5.jpg?$staticlink$" alt="">
             <a href="$httpUrl('Search-Show','q','CPI')$" class="link" style="width: 100%;height: 100%;bottom:0;left:0;" title="0% 방부제 회복크림 구매하기">0% 방부제 회복크림 구매하기</a>
         </div>
@@ -90,10 +89,9 @@
         <div class="event-box"><img src="events/AV-Hidden_Cicalfate/img3-m.jpg?$staticlink$" alt=""></div>
         <div class="event-box">
             <img src="events/AV-Hidden_Cicalfate/img4-m.jpg?$staticlink$" alt="">
-            <a href="$httpUrl('Product-Show','pid','520443')$" class="link" style="width: 50%;height: 76%;bottom: 10.5%;left: 0;" title="시칼파트 블루젤 40ml 구매하기">시칼파트 블루젤 40ml 구매하기</a>
-            <a href="$httpUrl('Product-Show','pid','649111')$" class="link" style="width: 48%;height: 76%;bottom: 10.5%;right: 1%;" title="시칼파트 S.O.S 크림 40ml 구매하기">시칼파트 S.O.S 크림 40ml 구매하기</a>
+            <a href="$httpUrl('Product-Show','pid','520443')$" class="link"  style="width: 95%;height: 75%;bottom: 3%;left: 2.5%" title="시칼파트 블루젤 40ml 구매하기">시칼파트 블루젤 40ml 구매하기</a>
         </div>
-        <div class="event-box">
+        <div class="event-box" style="margin-top: -4px;">
             <img src="events/AV-Hidden_Cicalfate/img5-m.jpg?$staticlink$" alt="">
             <a href="$httpUrl('Search-Show','q','CPI')$" class="link" style="width: 100%;height: 100%;bottom: 0%;left:0;" title="0% 방부제 회복크림 구매하기">0% 방부제 회복크림 구매하기</a>
         </div>
