12월 신규 제품 수정

--- a/app/assets/html/detail/MPDU-19.html
+++ b/app/assets/html/detail/MPDU-19.html
@@ -24,8 +24,7 @@
 
                         <p>피부 보습 효과 및<br>건조로부터 보호</p>
                     </li>
-                    <li><img alt="" src="#" style="width: 120px; height: 120px; background-color: #963147;"/>
-                        <!-- 이미지 경로 : DU/a02/GR_DU_15.jpg?$staticlink$ -->
+                    <li><img alt="" src="DU/a02/GR_DU_25.jpg?$staticlink$" />
                         <h4>바세린 및 글리세린</h4>
 
                         <p>피부보호막 형성과<br>수분 공급</p>
