--- a/app/assets/html/detail/MPKL-33.html
+++ b/app/assets/html/detail/MPKL-33.html
@@ -16,7 +16,8 @@
         </div>
 
         <div class="con_left">
-            <img alt="피오니컨디셔너" src="KL/a01/KL_01_33.jpg?$staticlink$" />
+            <img alt="피오니컨디셔너" src="#" style="width: 420px; height: 420px; display: block; background-color: #f4b7c7;"/>
+            <!-- <img alt="피오니컨디셔너" src="KL/a01/KL_01_33.jpg?$staticlink$" /> -->
         </div>
     </div>
 
@@ -35,8 +36,8 @@
         </div>
 
         <div class="con_right">
-            <img alt="보태니컬 엑스퍼티즈 시스템 마크" src="#" style="width: 26vw; height: 24.2vw; background-color: #137946;"/>
-            <!-- 이미지 추후 적용 : KL/ingredient/botanical_mark.jpg?$staticlink$ --></div>
+            <img alt="피오니 이미지" src="KL/ingredient/Peony.jpg?$staticlink$"/>
+        </div>
     </div>
 
     <div class="article a04">
@@ -97,14 +98,12 @@
             <div class="a08_box">
                 <ul>
                     <li>
-                        <img alt="" src="#" style="width: 182px; height: 182px; background-color: #842684;"/>
-                        <!-- 이미지 추후 삽입 : KL/a08/a08_27.jpg?$staticlink$ -->
+                        <img alt="" src="KL/a08/a08_27.jpg?$staticlink$" />
                         <span>STEP 1</span>
                         <p>샴푸 후 모발에 가름마 탄 후 두피와 모발에 전체 적으로 도포 해 줍니다.</p>
                     </li>
                     <li>
-                        <img alt="" src="#" style="width: 182px; height: 182px; background-color: #842684;"/>
-                        <!-- 이미지 추후 삽입 : KL/a08/a08_28.jpg?$staticlink$ -->
+                        <img alt="" src="KL/a08/a08_28.jpg?$staticlink$"/>
                         <span>STEP 2</span>
                         <p>직접 도포하여 제품이 골고루 스며들도록 손가락으로 마사지 한 후 2~3분 후에 물로 씻어 냅니다.</p>
                     </li>
@@ -148,8 +147,8 @@
                     <h4>피오니 세럼</h4>
 
                     <!-- <p>석류를 담은<br />염색 보호 컨디셔너</p> -->
-                    <img alt="" src="KL/a09/KL_01_34.jpg?$staticlink$" />
-                    <!-- 이미지 추후 삽입 : KL/a09/KL_01_34.jpg?$staticlink$ -->
+                    <img src="#" alt="" style="width: 245px; height: 393px; display: block; background-color: #f4b7c7;">
+                    <!-- <img alt="" src="KL/a09/KL_01_34.jpg?$staticlink$" /> -->
                     <!-- <a href="#">제품 바로가기</a> -->
                 </a></li>
             </ul>
