--- a/app/assets/html/detail/MPKL-34.html
+++ b/app/assets/html/detail/MPKL-34.html
@@ -16,8 +16,9 @@
         </div>
 
         <div class="con_left">
-            <img alt="피오니세럼" src="KL/a01/KL_01_34.jpg?$staticlink$" />
-        <!-- 이미지 추후 적용 :  --></div>
+            <img alt="피오니컨디셔너" src="#" style="width: 420px; height: 420px; display: block; background-color: #f4b7c7;"/>
+            <!-- <img alt="피오니세럼" src="KL/a01/KL_01_34.jpg?$staticlink$" /> -->
+        </div>
     </div>
 
     <div class="article a01-1">
@@ -34,8 +35,9 @@
             <h4>친환경 방식으로 추출된 진정 및 자극완화 성분 농축</h4>
         </div>
 
-        <div class="con_right"><img alt="보태니컬 엑스퍼티즈 시스템 마크" src="#" style="width: 495px; height: 460px; background-color: #137946;"/>
-        <!-- 이미지 추후 적용 : KL/ingredient/botanical_mark.jpg?$staticlink$ --></div>
+        <div class="con_right">
+            <img alt="피오니 이미지" src="KL/ingredient/Peony.jpg?$staticlink$"/>
+        </div>
     </div>
 
     <div class="article a04">
@@ -96,9 +98,8 @@
             <div class="a08_box">
                 <ul>
                     <li>
-                        <img alt="" src="#" style="width: 182px; height: 182px; background-color: #842684;"/>
-                        <!-- 이미지 추후 삽입 : KL/a08/a08_27.jpg?$staticlink$ -->
-                        <span>METHOD 1</span>
+                        <img alt="" src="KL/a08/a08_29.jpg?$staticlink$" />
+                        <span>STEP 1</span>
                         <p>타월 드라이 후 혹은 건조한 두피에 6~8회 도포하여 세럼이 골고루 스며 들도록 손가락으로 마사지 해 줍니다. 사용 후 씻어낼 필요 없이 매일 사용 가능합니다.</p>
                     </li>
                 </ul>
@@ -140,7 +141,8 @@
                     <h4>피오니 컨디셔너</h4>
 
                     <!-- <p>석류를 담은<br />염색 보호 컨디셔너</p> -->
-                    <img alt="" src="KL/a09/KL_01_33.jpg?$staticlink$" />
+                    <img src="#" alt="" style="width: 245px; height: 393px; display: block; background-color: #f4b7c7;">
+                    <!-- <img alt="" src="KL/a09/KL_01_33.jpg?$staticlink$" /> -->
                     <!-- <a href="#">제품 바로가기</a> -->
                 </a></li>
             </ul>
